Wade testing submodule commits

--- a/hadoop/README.rdoc
+++ b/hadoop/README.rdoc
@@ -1,6 +1,6 @@
 = DESCRIPTION:
 
-Yup, me testing again
+Yup, me testing again 2
 
 Installs Apache hadoop and sets up a basic distributed cluster per the quick start documentation.
 
