--- a/hadoop/README.rdoc
+++ b/hadoop/README.rdoc
@@ -1,6 +1,6 @@
 = DESCRIPTION:
 
-Clean slate
+Clean slate finalish test
 
 Installs Apache hadoop and sets up a basic distributed cluster per the quick start documentation.
 
