--- a/hadoop/README.rdoc
+++ b/hadoop/README.rdoc
@@ -1,5 +1,6 @@
 = DESCRIPTION:
 
+SO theres 1 more
 Installs Apache hadoop and sets up a basic distributed cluster per the quick start documentation.
 
 = REQUIREMENTS:
